# MetroPipeline

./: README.md
etl/: pyproject.toml
pipeline/: pyproject.toml
pipeline/.dg/: telemetry.yaml
pipeline/src/pipeline/defs/: assets.py
